--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "House Of Tara \u2014 Offline POS",
+  "name": "House Of Tara — Offline POS",
   "short_name": "HOT POS",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#7b3f98",
